# Python-Zork

./: .gitignore  CLAUDE.md  Makefile  PROJECT_STATE.md  README.md  decisions.md  main.py  package-lock.json  package.json  plan.md  playwright.config.ts  pyproject.toml  railway.json  server.py  tasks-history.yaml  tasks.yaml  vite.config.ts
.github/workflows/: test.yml
computerquest/: __init__.py  commands.py  config.py  game.py
computerquest/mechanics/: __init__.py  progress.py  save_load.py  visualizer.py
computerquest/mechanics/minigames/: __init__.py  _common.py  cpu.py  cpu_workload.py  memory.py  memory_patterns.py
computerquest/mechanics/puzzles/: __init__.py  parsers.py  registry.py  types.py
computerquest/mechanics/puzzles/data/cpu/: pipeline_alu_chain.yaml  pipeline_double_load_use.yaml  pipeline_forwarding_intro.yaml  pipeline_load_use.yaml  pipeline_no_hazards.yaml  pipeline_regfile_timing.yaml  pipeline_stall_no_forwarding.yaml
computerquest/mechanics/puzzles/data/memory/: l1_associativity_2way.yaml  l1_lru_basic.yaml  l2_fifo_eviction.yaml  l3_loop_pathology.yaml  page_table_in_ram.yaml  tlb_hitmiss_lru.yaml  tlb_walk_translate.yaml
computerquest/mechanics/puzzles/data/networking/: packet_route_dma_gpu.yaml  packet_route_dma_to_ram.yaml  packet_route_kernel.yaml  packet_route_reply.yaml  packet_route_ssd.yaml
computerquest/mechanics/puzzles/data/security/: signature_first_match.yaml  signature_near_miss.yaml  signature_rootkit_hunt.yaml  virus_signature_match.yaml
computerquest/mechanics/puzzles/data/storage/: hdd_seek_fcfs.yaml  hdd_seek_sstf.yaml  hdd_seek_sstf_zigzag.yaml  hdd_seek_zigzag.yaml  seek_order_matters.yaml
computerquest/mechanics/simulators/: __init__.py  base.py  cache.py  packet.py  pipeline.py  signature.py  storage.py  tlb.py
computerquest/models/: component.py  player.py
computerquest/utils/: helpers.py  map_renderer.py
computerquest/world/: __init__.py  architecture.py
docs/: architecture-microquiz.md  design-minigames.md
src/: App.tsx  index.css
src/components/: GameMap.test.tsx  GameMap.tsx
src/test/: setup.ts
tests/: __init__.py  _helpers.py  run_tests.py  test_architecture.py  test_commands.py  test_component.py  test_game.py  test_helpers.py  test_knowledge.py  test_microquiz_commands.py  test_minigames.py  test_player.py  test_progress.py  test_puzzle_data.py  test_save_load.py  test_server.py  test_version.py
tests/e2e/: play-through.spec.ts
tests/puzzles/: test_parsers.py  test_registry.py
tests/simulators/: test_base.py  test_cache.py  test_packet_storage_signature.py  test_pipeline.py  test_tlb.py
